@@ -2,6 +2,10 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+03-04-2025
+Streak: 1
+    - Following Tutorial: Add additional database operations
+
 01-04-2025
 Streak: 2
     - Following Tutorial: Finish designing TaskScreen
